# home_api

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: base_service.py  config.py  database.py  models.py
app/messages/: api.py  dependencies.py  models.py  schemas.py  services.py
app/redis_producer/: base.py  producer.py
app/routers/v1/: endpoints.py
migrations/: env.py
migrations/versions/: c253011e00b6_add_messages.py
pgdata/: postmaster.pid
pgdata/base/1/: 2619
pgdata/base/16384/: 1247  1249  1259  16389  16392  16394  16395  16401  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  3455  5002  pg_internal.init
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
