[tool.poetry]
name = "home-api"
version = "0.1.0"
description = ""
authors = ["Staselko <nat06024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
python-jose = "^3.3.0"
python-dateutil = "^2.9.0.post0"
loguru = "^0.7.3"
aiohttp = "^3.11.11"
sqlmodel = "^0.0.22"
setuptools = "^75.6.0"
redis = "^5.2.1"
async-timeout = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
